# aws-cdk-serverless-api-rust

./: Cargo.toml  LICENSE  README.md
cdk/: cdk.json  package.json
cdk/lib/: lambda-api-gateway-stack.ts
src/: lib.rs
