[package]
name = "book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.0"
aws-sdk-dynamodb = "0.28.0"
aws-config = "0.55.3"
tokio = { version = "1.26.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "fmt",
] }
mockall = "0.11.3"
async-trait = "0.1.51"
serde_json = "1.0.94"
serde = "1.0.130"

[dev-dependencies]
aws-smithy-http = "0.55.1"
aws-types = { version = "0.55.1"}
http = "0.2.8"

[[bin]]
name = "create"
path = "src/bin/create_handler.rs"

[[bin]]
name = "get"
path = "src/bin/get_handler.rs"

[[bin]]
name = "delete"
path = "src/bin/delete_handler.rs"

[[bin]]
name = "list"
path = "src/bin/list_handler.rs"
